# Dilbert

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: dockerize-dilbert.yml  generate-images.yml  lint-source.yml  main.yml  run-integration.yml
bot/: Dockerfile  pyproject.toml
dawn/: pyproject.toml
dawn/tests/: test_dawn.py
dilbert/: Dockerfile  main.py
dilbert/dilbert/: main.py
tests/: test_dilbert.py
wally/: pyproject.toml
wally/tests/: test_wally.py
